// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code-block: code block content is copied to clipboard after clicking on the copy button for comment 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "Some code here",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    Object {
      "content": Array [
        Object {
          "text": "Some code here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`code-block: code block content is copied to clipboard after clicking on the copy button for full-page 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "Some code here",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    Object {
      "content": Array [
        Object {
          "text": "Some code here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`code-block: produces correct ADF after language change for comment 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": "javascript",
        "uniqueId": null,
      },
      "type": "codeBlock",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`code-block: produces correct ADF after language change for full-page 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": "javascript",
        "uniqueId": null,
      },
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;
